Adding Booking Functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
         </div>
         <% } else { %>
         <a href="registerUser">Register as User</a>
-        <a href="registerProvider">Register as Provider</a>
+        <a href="registerPro">Register as Provider</a>
         <a href="loginUser">Login for User</a>
         <a href="loginPro">Login for Provider</a>
         <% } %>
@@ -123,32 +123,6 @@
         </div>
       </div>
     </div>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        console.log("DOM Loaded");
-        const serviceCards = document.querySelectorAll(".servCard");
-        console.log("Service Cards:", serviceCards);
-
-        serviceCards.forEach((card) => {
-          card.addEventListener("click", (event) => {
-            console.log("Card clicked:", card);
-            const url = card.getAttribute("data-url");
-            console.log("URL:", url);
-
-            const userLoggedIn =
-              document.body.getAttribute("data-user-logged-in") === "true";
-            if (userLoggedIn) {
-              if (url) {
-                window.location.href = url;
-              } else {
-                console.error("URL not found for the card.");
-              }
-            } else {
-              alert("Please log in to view this service.");
-            }
-          });
-        });
-      });
-    </script>
+    <script src="/javascripts/index.js"></script>
   </body>
 </html>
