--- a/views/provider/register.ejs
+++ b/views/provider/register.ejs
@@ -10,12 +10,10 @@
     <div class="main">
       <div class="all">
         <h1>Provider Registration Form</h1>
-        <form
-          action="/registerProvider"
-          method="post"
-          enctype="multipart/form-data"
-        >
-          <label for="firmname">Firm Name:</label>
+        <form action="/registerPro" method="post" enctype="multipart/form-data">
+          <label for="firmname"
+            >Firm Name:<span style="color: red">*</span></label
+          >
           <input
             type="text"
             id="firmname"
@@ -23,10 +21,12 @@
             required
           /><br /><br />
 
-          <label for="email">Email:</label>
+          <label for="email">Email:<span style="color: red">*</span></label>
           <input type="email" id="email" name="email" required /><br /><br />
 
-          <label for="password">Password:</label>
+          <label for="password"
+            >Password:<span style="color: red">*</span></label
+          >
           <input
             type="password"
             id="password"
@@ -34,19 +34,62 @@
             required
           /><br /><br />
 
-          <label for="city">City:</label>
+          <label for="state"
+            >State/Union Territory:<span style="color: red">*</span></label
+          >
+          <select id="state" name="state" required>
+            <option value="">Select State/Union Territory</option>
+            <option value="Andhra Pradesh">Andhra Pradesh</option>
+            <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+            <option value="Assam">Assam</option>
+            <option value="Bihar">Bihar</option>
+            <option value="Chhattisgarh">Chhattisgarh</option>
+            <option value="Goa">Goa</option>
+            <option value="Gujarat">Gujarat</option>
+            <option value="Haryana">Haryana</option>
+            <option value="Himachal Pradesh">Himachal Pradesh</option>
+            <option value="Jharkhand">Jharkhand</option>
+            <option value="Karnataka">Karnataka</option>
+            <option value="Kerala">Kerala</option>
+            <option value="Madhya Pradesh">Madhya Pradesh</option>
+            <option value="Maharashtra">Maharashtra</option>
+            <option value="Manipur">Manipur</option>
+            <option value="Meghalaya">Meghalaya</option>
+            <option value="Mizoram">Mizoram</option>
+            <option value="Nagaland">Nagaland</option>
+            <option value="Odisha">Odisha</option>
+            <option value="Punjab">Punjab</option>
+            <option value="Rajasthan">Rajasthan</option>
+            <option value="Sikkim">Sikkim</option>
+            <option value="Tamil Nadu">Tamil Nadu</option>
+            <option value="Telangana">Telangana</option>
+            <option value="Tripura">Tripura</option>
+            <option value="Uttar Pradesh">Uttar Pradesh</option>
+            <option value="Uttarakhand">Uttarakhand</option>
+            <option value="West Bengal">West Bengal</option>
+            <option value="Andaman and Nicobar Islands">
+              Andaman and Nicobar Islands
+            </option>
+            <option value="Chandigarh">Chandigarh</option>
+            <option value="Dadra and Nagar Haveli and Daman and Diu">
+              Dadra and Nagar Haveli and Daman and Diu
+            </option>
+            <option value="Lakshadweep">Lakshadweep</option>
+            <option value="Delhi">Delhi</option>
+            <option value="Puducherry">Puducherry</option>
+            <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+            <option value="Ladakh">Ladakh</option></select
+          ><br /><br />
+
+          <label for="city">City:<span style="color: red">*</span></label>
           <input type="text" id="city" name="city" /><br /><br />
 
-          <label for="state">State:</label>
-          <input type="text" id="state" name="state" required /><br /><br />
-
-          <label for="country">Country:</label>
-          <input type="text" id="country" name="country" required /><br /><br />
-
-          <label for="contact">Whatsapp Number:</label>
+          <label for="contact"
+            >Whatsapp Number:<span style="color: red">*</span></label
+          >
           <input type="tel" id="contact" name="contact" required /><br /><br />
 
-          <label for="service">Service:</label>
+          <label for="service">Service:<span style="color: red">*</span></label>
           <select id="service" name="service" required>
             <option value="caterer">Caterer</option>
             <option value="decor">Decorator</option>
@@ -56,7 +99,7 @@
             <option value="other">Other</option></select
           ><br /><br />
 
-          <label for="website">Website : </label>
+          <label for="website">Website:</label>
           <input type="url" id="website" name="website" /><br /><br />
 
           <label for="description">Description:</label><br />
@@ -66,17 +109,24 @@
           ><br />
           <input type="url" id="social" name="social" /><br /><br />
 
-          <label for="budget">Your Price:</label><br />
-          <input type="number" id="budget" name="budget" /><br /><br />
+          <label for="budget"
+            >Your Price:<span style="color: red">*</span></label
+          ><br />
+          <input type="number" id="budget" name="budget" required /><br /><br />
 
-          <label for="photos">Photos:</label>
+          <label for="profilePhoto"
+            >Profile Photo:<span style="color: red">*</span></label
+          >
           <input
             type="file"
-            id="photos"
-            name="photos"
-            multiple
+            id="profilePhoto"
+            name="profilePhoto"
+            accept="image/*"
             required
           /><br /><br />
+
+          <label for="photos">Additional Photos:</label>
+          <input type="file" id="photos" name="photos" multiple /><br /><br />
           <button type="submit">Register</button>
           <a href="/">Back</a>
         </form>
