--- a/views/provider/success.ejs
+++ b/views/provider/success.ejs
@@ -76,6 +76,10 @@
       .button:hover {
         background-color: #388e3c;
       }
+      .manage-photos {
+        margin-top: 20px;
+        text-align: center;
+      }
     </style>
     <title>Success</title>
   </head>
