--- a/views/provider/setAvailability.ejs
+++ b/views/provider/setAvailability.ejs
@@ -49,20 +49,22 @@
       <div id="busyDatesList">
         <% if (busyDates && busyDates.length > 0) { %> <%
         busyDates.forEach(function(date) { %>
-        <span class="busy-date"><%= date.toDateString() %></span>
+        <span class="busy-date"
+          ><%= date.toDateString() %> - <%= date.toLocaleTimeString() %></span
+        >
         <% }); %> <% } else { %>
         <p>No busy dates set.</p>
         <% } %>
       </div>
     </div>
-
     <form action="/set-availability" method="POST">
       <label for="busyStartDate">Set Busy Dates (from - to):</label><br />
       <input type="date" name="busyStartDate" required />
+      <input type="time" name="busyStartTime" required />
       <input type="date" name="busyEndDate" required />
+      <input type="time" name="busyEndTime" required />
       <button type="submit" class="button">Set Busy Dates</button>
     </form>
-
     <form action="/available-dates" method="POST">
       <label for="availableDates">Set Available Dates (comma separated):</label>
       <input
