Completed Provider's side

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
       <div class="navbarright">
         <% if (user) { %>
         <a href="/todo">Create todo list</a>
-        <a href="/myBookings">My Bookings</a>
+        <a href="myBookings">My Bookings</a>
         <div class="dropdown">
           <button class="dropbtn"><i class="fa-solid fa-user"></i></button>
           <div class="dropdown-content">
