--- a/views/provider/register.ejs
+++ b/views/provider/register.ejs
@@ -102,7 +102,9 @@
           <label for="website">Website:</label>
           <input type="url" id="website" name="website" /><br /><br />
 
-          <label for="description">Description:</label><br />
+          <label for="description"
+            >Description:<span style="color: red">*</span></label
+          ><br />
           <textarea id="description" name="description"></textarea><br /><br />
 
           <label for="social">Instagram Account url (if available):</label
