--- a/views/services/bookingUser.ejs
+++ b/views/services/bookingUser.ejs
@@ -48,10 +48,6 @@
       <label for="eventDate">Select Event Date:</label>
       <input type="date" id="eventDate" required />
     </div>
-    <div class="input-field">
-      <label for="budget">Your Budget:</label>
-      <input type="number" id="budget" required />
-    </div>
 
     <button class="btn-book" onclick="confirmBooking('<%= service._id %>')">
       Book now
@@ -60,9 +56,8 @@
     <script>
       function confirmBooking(providerId) {
         const eventDate = document.getElementById("eventDate").value;
-        const budget = document.getElementById("budget").value;
 
-        if (!eventDate || !budget) {
+        if (!eventDate) {
           alert("Please fill in all fields.");
           return;
         }
@@ -78,7 +73,6 @@
               providerId: providerId,
               serviceType: "<%= serviceType %>",
               eventDate: eventDate,
-              budget: budget,
             }),
           })
             .then((response) => response.json())
